<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2026 timklge
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ExtensionInfo
    displayName="@string/extension_name"
    icon="@drawable/trip"
    id="karoo-routegraph"
    scansDevices="false"
    mapLayer="true">

    <DataType
        description="@string/minimap_description"
        displayName="@string/minimap"
        graphical="true"
        icon="@drawable/trip"
        typeId="minimap" />

    <DataType
        description="@string/routegraph_description"
        displayName="@string/routegraph"
        graphical="true"
        icon="@drawable/chart"
        typeId="routegraph" />

    <DataType
        description="@string/verticalroutegraph_description"
        displayName="@string/verticalroutegraph"
        graphical="true"
        icon="@drawable/trip"
        typeId="verticalroutegraph" />

    <DataType
        description="@string/distance_to_poi_description"
        displayName="@string/distance_to_poi"
        graphical="false"
        icon="@drawable/trip"
        typeId="distancetopoi" />

    <DataType
        description="@string/elevation_to_poi_description"
        displayName="@string/elevation_to_poi"
        graphical="false"
        icon="@drawable/trip"
        typeId="elevationtopoi" />

    <DataType
        description="@string/etapoi_description"
        displayName="@string/etapoi"
        graphical="false"
        icon="@drawable/trip"
        typeId="etapoi" />

    <DataType
        description="@string/eta_description"
        displayName="@string/eta"
        graphical="false"
        icon="@drawable/trip"
        typeId="eta" />

    <DataType
        description="@string/poi_button_description"
        displayName="@string/poi_button"
        graphical="true"
        icon="@drawable/trip"
        typeId="poiButton" />

    <DataType
        description="@string/surfacetype_description"
        displayName="@string/surfacetype"
        graphical="true"
        icon="@drawable/trip"
        typeId="surfacetype" />

</ExtensionInfo>
